--- a/app/views/contacts/index.html.erb
+++ b/app/views/contacts/index.html.erb
@@ -1,2 +1,8 @@
-<h1>Contacts#index</h1>
-<p>Find me in app/views/contacts/index.html.erb</p>
+<h1>Address Contacts</h1>
+<ul>
+<% @contacts.each do |contact| %>
+<li>
+<h3><%= contact.name %></h3>
+</li>
+<% end %>
+</ul>
