--- a/app/views/contacts/show.html.erb
+++ b/app/views/contacts/show.html.erb
@@ -4,5 +4,6 @@
 <ul>
   <li>Phone: <a href="tel:+<%= @contact.phone_number %>"><%= @contact.phone_number %></a></li>
   <li>Email: <a href="mailto:<%= @contact.email_address %>"><%= @contact.email_address %></a></li>
+  <li>Birthday: <%= @contact.birthday %></li>
   <li>Company: <%= @contact.company %></li>
 </ul>
