--- a/app/views/contacts/edit.html.erb
+++ b/app/views/contacts/edit.html.erb
@@ -25,7 +25,7 @@
   <div>
     <%= f.label :birthday %>
     <div>
-      <%= f.text_field :birthday %>
+      <%= f.date_field :birthday %>
     </div>
   </div>
 
