--- a/app/views/contacts/new.html.erb
+++ b/app/views/contacts/new.html.erb
@@ -5,8 +5,12 @@
   <%= f.label :name %>
   <%= f.text_field :name %>
 
-  <%= f.label :email_address %>
-  <%= f.email_field :email_address %>
+  <%= f.fields_for :email_labels do |label_form| %>
+    <%= label_form.fields_for :emails do |email_form| %>
+      <%= email_form.label :address %>
+      <%= email_form.email_field :address %>
+    <% end %>
+  <% end %>
 
   <%= f.label :phone_number %>
   <%= f.telephone_field :phone_number %>
