--- a/app/views/contacts/new.html.erb
+++ b/app/views/contacts/new.html.erb
@@ -6,7 +6,7 @@
   <%= f.text_field :name %>
 
   <%= f.fields_for :email_labels do |label_form| %>
-    <%= label_form.fields_for :emails do |email_form| %>
+    <%= label_form.fields_for :email do |email_form| %>
       <%= email_form.label :address %>
       <%= email_form.email_field :address %>
     <% end %>
