--- a/app/views/contacts/index.html.erb
+++ b/app/views/contacts/index.html.erb
@@ -1,8 +1,8 @@
-<h1>Contacts</h1>
-
+<h1 class="font-semibold text-xl">Contacts</h1>
+<hr class="w-20 my-2 border-blue-200">
 <ul>
   <% @contacts.each do |contact| %>
-    <li>
+    <li class="py-2 hover:text-blue-400">
       <a href="/contacts/<%= contact.id %>"><h3><%= contact.name %></h3></a>
     </li>
   <% end %>
