--- a/app/views/contacts/new.html.erb
+++ b/app/views/contacts/new.html.erb
@@ -1,26 +1,47 @@
-<h1>Add new contact</h1>
+<h1 class="font-semibold text-xl">Add new contact</h1>
+<hr class="w-20 my-2 border-blue-200">
 
-<%= form_with model: @contact do |f| %>
+<div class="flex my-2">
+  <%= form_with model: @contact do |f| %>
+    <div>
+      <%= f.label :name %>
+      <div>
+        <%= f.text_field :name, class: "p-2 rounded my-2 border border-gray-300"  %>
+      </div>
+    </div>
 
-  <%= f.label :name %>
-  <%= f.text_field :name %>
+    <div>
+      <%= f.fields_for :email_labels do |label_form| %>
+        <%= label_form.fields_for :email do |email_form| %>
+          <%= email_form.label :address %>
+          <div>
+            <%= email_form.email_field :address, class: "p-2 rounded my-2 border border-gray-300" %>
+          </div>
+        <% end %>
+      <% end %>
+    </div>
 
-  <%= f.fields_for :email_labels do |label_form| %>
-    <%= label_form.fields_for :email do |email_form| %>
-      <%= email_form.label :address %>
-      <%= email_form.email_field :address %>
-    <% end %>
+    <div>
+      <%= f.label :phone_number %>
+      <div>
+        <%= f.text_field :phone_number, class: "p-2 rounded my-2 border border-gray-300" %>
+      </div>
+    </div>
+
+    <div>
+      <%= f.label :birthday %>
+      <div>
+        <%= f.date_field :birthday, class: "p-2 rounded my-2 border border-gray-300" %>
+      </div>
+    </div>
+
+    <div>
+      <%= f.label :company %>
+      <div>
+        <%= f.text_field :company, class: "p-2 rounded my-2 border border-gray-300" %>
+      </div>
+    </div>
+
+    <%= f.submit "Create", class: "btn px-3 py-2 hover:bg-blue-200 cursor-pointer transition duration-300 ease-in-out rounded" %>
   <% end %>
-
-  <%= f.label :phone_number %>
-  <%= f.telephone_field :phone_number %>
-
-  <%= f.label :birthday %>
-  <%= f.date_field :birthday %>
-
-  <%= f.label :company %>
-  <%= f.text_field :company %>
-
-  <%= f.submit "Create" %>
-
-<% end %>
+</div>
